<resources>
    <string name="app_name">Geekout</string>
    <string name="action_settings">Settings</string>
    <string name="action_scoreboard">Scoreboard</string>
    <string name="done">Done</string>
    <string name="game_mode">Game Mode</string>
    <string name="points">Points</string>
    <string name="rounds">Rounds</string>
    <string name="point_limit">Point Limit (if Points selected)</string>
    <string name="point_limit_hint">5</string>
    <string name="round_limit">Round Limit (if Rounds selected)</string>
    <string name="round_limit_hint">6</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="reroll">Re-Roll</string>
    <string name="differentQuestion">Different Question</string>
    <string name="settings_title">Settings</string>
    <string name="default_team_name">The Placeholders</string>
    <string name="default_bid">0</string>
    <string name="bid">Bid</string>
    <string name="pass">Pass</string>
    <string name="default_question">This is where the current question will be displayed</string>
    <string name="timeRemaining">Time remaining: </string>
    <string name="num_teams_title">How many teams are playing?</string>
    <string name="team_num">2</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="team1">Team 1: </string>
    <string name="team2">Team 2: </string>
    <string name="team3">Team 3: </string>
    <string name="team4">Team 4: </string>
    <string name="team5">Team 5: </string>
    <string name="notPlaying">Not Playing</string>
    <string name="roll_dice">Roll the die!</string>
    <string name="end_game">End Game</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">GeekOut</string>
    <string name="slide1">GeekOut is a trivia game in which questions have more than one valid answer.
        When a question is drawn, teams will take turns bidding on how many answers they think they can name.
        The winner of that bidding then needs to give the number of answers they bid.
        If they are able to give enough answers they get one point.  If they cannot give enough answers
        they lose two points.  The team with the most points at the end of the game wins.</string>

</resources>
