<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bryan_2.geekout_sqltest.SettingsActivity">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_title" />

    <TextView
        android:id="@+id/gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/settingsTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/game_mode" />

    <!-- derived from UIRadioGroup class example -->
    <RadioGroup
        android:id="@+id/gameModeRadioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/gameMode"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/pointsLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/points" />

        <RadioButton
            android:id="@+id/roundsLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rounds" />
    </RadioGroup>

    <TextView
        android:id="@+id/pointLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/gameModeRadioButtons"
        android:layout_centerHorizontal="true"
        android:text="@string/point_limit" />

    <TextView
        android:id="@+id/currentPointValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/point_limit_hint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/decrementPointButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gameMode"
        android:layout_centerVertical="true"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <ImageButton
        android:id="@+id/incrementPointButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gameMode"
        android:layout_alignTop="@+id/decrementPointButton"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/roundLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/currentPointValue"
        android:layout_centerHorizontal="true"
        android:text="@string/round_limit" />

    <TextView
        android:id="@+id/currentRoundValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/decrementRoundButton"
        android:layout_alignStart="@+id/currentPointValue"
        android:layout_marginBottom="11dp"
        android:text="@string/round_limit_hint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/decrementRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/decrementPointButton"
        android:layout_below="@+id/roundLimit"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <ImageButton
        android:id="@+id/incrementRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gameMode"
        android:layout_alignTop="@+id/decrementRoundButton"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Space
        android:id="@+id/spacer"
        android:layout_below="@id/incrementRoundButton"
        android:layout_centerHorizontal="true"
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/incrementRoundButton"
        android:layout_toLeftOf="@id/spacer"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/incrementRoundButton"
        android:layout_toRightOf="@id/spacer"
        android:layout_centerHorizontal="true"
        android:text="@string/update" />


</RelativeLayout>
